Update portfolio content for Muhammad Tehmasib Ali Tashfeen

--- a/github-pages-website/src/index.html
+++ b/github-pages-website/src/index.html
@@ -3,48 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Jane Doe | Mobile System Security & AI</title>
+    <title>Muhammad Tehmasib Ali Tashfeen | PhD Candidate & Researcher</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
-        <h1>Dr. Jane Doe</h1>
-        <h2>PhD Student | Mobile System Security & AI</h2>
+        <h1>Muhammad Tehmasib Ali Tashfeen</h1>
+        <h2>PhD Candidate & Graduate Research Assistant</h2>
         <h3>Wichita State University</h3>
+        <div style="margin-top:10px;">
+            <span>316-214-8670</span> |
+            <a href="mailto:mxalitashfeen@shockers.wichita.edu">mxalitashfeen@shockers.wichita.edu</a> |
+            <a href="#" target="_blank">LinkedIn</a> |
+            <a href="#" target="_blank">GitHub</a> |
+            <a href="#" target="_blank">Google Scholar</a>
+        </div>
     </header>
     <main>
         <section>
             <h2>About Me</h2>
             <p>
-                I am a PhD student at Wichita State University specializing in mobile system security and artificial intelligence. My research focuses on securing mobile platforms using advanced AI-driven techniques.
+                I am a PhD Candidate and Graduate Research Assistant at Wichita State University, specializing in Artificial Intelligence, Mobile Security, and Software Analysis. My work bridges advanced AI, static analysis, and large-scale data-driven security for Android applications.
             </p>
         </section>
         <section>
-            <h2>Research Interests</h2>
+            <h2>Education</h2>
             <ul>
-                <li>Mobile System Security</li>
-                <li>Artificial Intelligence in Security</li>
-                <li>Malware Detection</li>
-                <li>Privacy-Preserving Machine Learning</li>
-                <li>Secure Mobile App Development</li>
+                <li><strong>PhD in Electrical Engineering & Computer Science</strong>, Wichita State University, Wichita, KS (Aug 2023 – May 2027)</li>
+                <li><strong>Bachelor of Electrical Engineering</strong>, National University of Computer and Emerging Sciences, Islamabad, Pakistan (Aug 2015 – May 2019)</li>
             </ul>
         </section>
         <section>
-            <h2>Publications</h2>
+            <h2>Experience</h2>
             <ul>
-                <li>"AI-Driven Malware Detection in Android Systems" - IEEE S&P 2025</li>
-                <li>"Privacy-Aware Mobile App Analysis" - ACM CCS 2024</li>
+                <li><strong>Graduate Research Assistant</strong>, Wichita State University - Software Analysis & Intelligence Laboratory (Aug 2023 – Present, Wichita, KS)
+                    <ul>
+                        <li>Led research at the intersection of AI and Mobile Security, developing static analysis and data-driven methods for Android security.</li>
+                        <li>Directed creation of a large-scale, manually validated dataset of memory leaks in Android Java apps (650+ open-source projects).</li>
+                        <li>Developed automated compilation scripts and managed manual verification for high-fidelity ground truth.</li>
+                        <li>Utilized Soot framework for deep static analysis and detection tool development.</li>
+                        <li>Pioneered LLMs for bug detection and violation categorization in Android codebases.</li>
+                        <li>Managed NSF Expanse Datacenter for large-scale model training and deployment.</li>
+                        <li>Authored a survey paper on Side-Channel Attacks in SDNs (submitted/published).</li>
+                    </ul>
+                </li>
+                <li><strong>Senior Consultant Technology Risk</strong>, Ernst and Young Ford Rhodes (Mar 2023 – Jun 2023, Islamabad, Pakistan)
+                    <ul>
+                        <li>Led cybersecurity audit for PTCL and Ufone, assessing data centers, network security, and SOCs.</li>
+                        <li>Evaluated security controls, incident response, and risk management for compliance.</li>
+                    </ul>
+                </li>
+                <li><strong>Information Systems Auditor</strong>, The Bank of Punjab (Nov 2020 – Mar 2023, Lahore, Pakistan)
+                    <ul>
+                        <li>Conducted security audits for 100+ banking applications and solutions.</li>
+                        <li>Authored quarterly security assurance reports for the Board, including risk heat maps and remediation tracking.</li>
+                    </ul>
+                </li>
+                <li><strong>Executive Engineer</strong>, Iron Bridge Systems (Jan 2020 – Nov 2020, Lahore, Pakistan)
+                    <ul>
+                        <li>Implemented network/infrastructure security (Firewalls, SIEM, WAFs, Antivirus), reducing incidents by 90%.</li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <section>
-            <h2>Contact</h2>
-            <p>Email: jane.doe@wichita.edu</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">janedoe</a></p>
-            <p>GitHub: <a href="https://github.com/janedoe" target="_blank">janedoe</a></p>
+            <h2>Honors & Awards</h2>
+            <ul>
+                <li>Merit-Based Scholarships/Fellowships</li>
+                <li>Best Paper/Presentation Awards at International Conferences</li>
+                <li>Competitive National/International Industry Awards</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Technical Skills</h2>
+            <ul>
+                <li><strong>Languages & Scripting:</strong> Python, SQL, Java</li>
+                <li><strong>ML/Stats:</strong> Logistic Regression, Regularization, Tree Ensembles (XGBoost/LightGBM), Class Imbalance, A/B Testing, SHAP, Cross-Validation, Model Monitoring</li>
+                <li><strong>NLP/LLMs:</strong> Prompting, RAG, Function Calling/Tools, agentic orchestration (LangChain/LangGraph), OpenAI & Hugging Face Ecosystem</li>
+                <li><strong>Big Data/Distributed:</strong> PySpark, Dask, Parquet, Delta-style patterns</li>
+                <li><strong>Cloud/MLOps:</strong> AWS (S3, IAM, ECR, EKS, Batch/EMR), Docker, Kubernetes, Makefiles, GitHub Actions</li>
+                <li><strong>Data Eng:</strong> Data modeling, Feature stores, Airflow-style orchestration, Logging/Observability</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Hospital Operations Analytics</strong> | Python, Pandas, Dask, PySpark, AWS S3, Logistic Regression, LightGBM, XGBoost, Kubernetes
+                    <ul>
+                        <li>Scaled EDA and feature engineering with Dask/PySpark; implemented window functions and schema validation.</li>
+                        <li>Trained models with class-imbalance handling; added SHAP explainability and model cards.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Certifications</h2>
+            <ul>
+                <li>EC Council: Certified Ethical Hacker (CEHv11) | ECC9765324108</li>
+                <li>(ISC)² Certified in Cybersecurity | 914385</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Service</h2>
+            <ul>
+                <li>Member, Institute of Electrical and Electronics Engineers (IEEE)</li>
+                <li>Journal Reviewing Activities</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2026 Dr. Jane Doe | Wichita State University</p>
+        <p>&copy; 2026 Muhammad Tehmasib Ali Tashfeen | Wichita State University</p>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
